testsuite/tests/properties/invalid_and_or/op_bool/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    @ignored
    fun f(lhs: Equation, rhs: Equation): Equation = lhs and lhs
}
